# oldest-living-person

./: .env.example  .gitignore  LICENSE  README  README.md  ddl.sql  index.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
oldest/: main.py  pyproject.toml  requirements.txt  temp_sql_translate.sql
