[tool.poetry]
name = "oldest-living-person"
version = "0.1.0"
description = "Monitor Wikipedia and tweet when the oldest living person has changed"
authors = ["Greg Finley <gregory.finley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
