[tool.poetry]
name = "oldest-living-person"
version = "0.1.0"
description = "Monitor Wikipedia and tweet when the oldest living person has changed"
authors = ["Greg Finley <gregory.finley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
pandas = "^1.3.4"
lxml = "^4.6.4"
python-dotenv = "^0.19.2"
tweepy = "^4.4.0"
pytz = "^2021.3"
html5lib = "^1.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
mypy = "^0.910"
black = "^21.9b0"
flake8 = "^4.0.1"
types-mysqlclient = "^2.1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
